--- a/app/assets/stylesheets/components.css
+++ b/app/assets/stylesheets/components.css
@@ -3,6 +3,12 @@
     background-color: var(--elevated-one);
 }
 
+.card > [card-header] {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
+
 /* Button */
 button {
     padding: var(--sm);
@@ -27,10 +33,6 @@ button:hover {
 .table-container {
     position: relative;
     width: 100%;
-}
-
-table {
-    padding: var(--sm);
 }
 
 th {
