--- a/app/views/progression/index.html.erb
+++ b/app/views/progression/index.html.erb
@@ -4,6 +4,13 @@
 </div>
 <br>
 <div class="card">
-    <h2>Log</h2>
+    <div card-header>
+        <h2 card-title>Log</h2>
+        <div card-actions>
+            <button>Log</button>
+        </div>
+    </div>
+    <div card-body>
     <%= render(@log_table)%>
+    </div>
 </div>
